--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ social:
     - https://github.com/yunagi-64
 
 # Images + files
-logo: assets/img/my_image.jpg
+logo: assets/img/my_image.JPG
 cv_url: assets/files/cv.pdf
 resume_url: assets/files/resume.pdf
 
