--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: Personal website
 url: https://yunagi-64.github.io
 main_github_io: true
 long_description: >-
-    Hi, I am a first-year master's student at Osaka University.
+    Hi, I am a second-year master's student at Osaka University.
     My research interest is to investigate how the human brain perceives and recognizes the world.
     Recently, I am particularly interested in exploring the correspondence between the human brain and artificial intelligence.
 
