--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ main_github_io: true
 long_description: >-
     Hi, I am a second-year master's student at Osaka University.
     My research interest is to investigate how the human brain perceives and recognizes the world.
-    Recently, I am particularly interested in exploring the correspondence between the human brain and artificial intelligence.
+    Recently, I have been particularly interested in exploring the relationship between the human brain and artificial intelligence, especially large language models (LLMs).
 
 # Social links
 github_url: https://github.com/yunagi-64
