--- a/_config.yml
+++ b/_config.yml
@@ -44,11 +44,11 @@ colors:
   text: 282828
   tag: dbefdc
   tag_hover: 93cf95
-  header_background: 2b422b
-  header_text: dbefdc
-  header_link_hover: 93cf95
-  links: 459c48
-  links_visited: 357a38
+  header_background: cfeffb
+  header_text: 002e3e
+  header_link_hover: 000f14
+  links: 4171f7
+  links_visited: 0c4cfe
 
 # Colors - dark mode
 colors_dark:
