--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ long_description: >-
 
 # Social links
 github_url: https://github.com/yunagi-64
-# linkedin_url:
+googlescholar_url: https://scholar.google.com/citations?user=JZLIe04AAAAJ&hl=ja&oi=sra
 social:
   links:
-    # - http://www.linkedin.com/in/your-name
-    - https://github.com/yunagi-64
+    - https://github.com/yunagi-64 
+    - https://scholar.google.com/citations?user=JZLIe04AAAAJ&hl=ja&oi=sra
 
 # Images + files
 logo: assets/img/my_image.JPG
