--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,16 @@ title: Yuko Nakagi
 description: Personal website
 url: https://yunagi-64.github.io
 main_github_io: true
-long_description: >-
+long_description_en: >-
     Hi, I am a second-year master's student at Osaka University.
     My research interest is to investigate how the human brain perceives and recognizes the world.
     Recently, I have been particularly interested in exploring the relationship between the human brain and artificial intelligence, especially large language models (LLMs).
 
+long_description_ja: >-
+    初めまして！大阪大学大学院生命機能研究科修士課程二年生の中木裕子です。
+    人間の脳がどのように世界を知覚し、認識するのかを明らかにすることに興味を持って研究を進めています。
+    最近は特に、人間の脳と人工知能（特に大規模言語モデル）との関係性を探ることに興味を持っています。
+    
 # Social links
 github_url: https://github.com/yunagi-64
 googlescholar_url: https://scholar.google.com/citations?user=JZLIe04AAAAJ&hl=ja&oi=sra
